refactor(symbol-resolver): simplify parameter validation and improve readability
- Modified `DefaultSymbolTable.validateParameters()` to directly return a copy of the parameters list, removing unnecessary uniqueness checks.
- Updated `NameResolver` to conditionally resolve function body statements based on scope presence.
- Refactored `ScopeMapping` constructor to enhance null entry validation and ensure immutability of the statement scopes map.
- Changed `SymbolBinder` to use `bindStatement()` for ElseIf branches for consistency.

These changes streamline the code, enhance maintainability, and improve clarity without altering existing functionality.